@@ -1,15 +1,15 @@
-FROM gradle:7.0.0-jdk11 AS build
+FROM gradle:7.2.0-jdk11 AS build
 
 WORKDIR /home/gradle/src
 COPY --chown=gradle:gradle . .
 
-RUN gradle shadowJar
+RUN gradle installDist --no-daemon
 
 FROM openjdk:17-jdk
 
 RUN mkdir /app
 VOLUME /var/data
 
-COPY --from=build /home/gradle/src/build/libs/*.jar /app/app.jar
+COPY --from=build /home/gradle/src/build/install/DevDenBot /app
 
-ENTRYPOINT ["java", "-jar", "/app/app.jar", "--add-exports", "java.desktop/sun.font=ALL-UNNAMED"]
+ENTRYPOINT ["/app/bin/DevDenBot"]
